[tool.poetry]
name = "fmv"
version = "0.1.0"
description = ""
authors = ["wiesoauch <juliamayer@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pytest = "^7.2.1"
h5py = "^3.8.0"
pandas = "^1.5.3"
jupyter = "^1.0.0"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scipy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
